# proto/gen/openapiv2/public/account/v1/account_service.swagger.yaml
@@ -163,15 +163,11 @@ definitions:
       email:
         type: string
         description: The email of a user
-      username:
-        type: string
-        description: The username of a user
       password:
         type: string
         description: The password of a user
     required:
       - email
-      - username
       - password
   v1LoginUserResponse:
     type: object
@@ -212,6 +208,9 @@ definitions:
         type: string
         format: date-time
       createTime:
+        type: string
+        format: date-time
+      deleteTime:
         type: string
         format: date-time
 securityDefinitions:
